# Electric-demand-prediction

./: .gitignore  README.md  pyproject.toml
answer/: final_submission0822.csv  submission_final_0819.csv
notebooks/: EDA_oh.ipynb  [Baseline]_XGBoost를 활용한 전력사용량 예측.ipynb
source/: params.py  preprocess.py  train.py  transform.py
