[project]
name = "electric-demand-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair[all]>=5.5.0",
    "duckdb>=1.3.2",
    "ipykernel>=6.30.1",
    "lightgbm>=4.6.0",
    "mlflow>=3.2.0",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
]

[dependency-groups]
dev = [
    "tslearn>=0.6.3",
]
